src/test/ui/rfc-2093-infer-outlives/explicit-dyn.stderr
error: rustc_outlives
  --> $DIR/explicit-dyn.rs:8:1
   |
LL | / struct Foo<'a, A>
LL | | {
LL | |     foo: Box<dyn Trait<'a, A>>
LL | | }
   | |_^
   |
   = note: A : 'a

error: aborting due to previous error

